// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App 1`] = `
<div
  className="mainwindow"
/>
`;

exports[`App with loader disabled 1`] = `
<div
  className="mainwindow"
/>
`;

exports[`App with loader enabled 1`] = `
Array [
  <div
    id="loader"
  />,
  <div
    className="mainwindow"
  />,
]
`;
